# blocks-of-c

./: .gitignore  CMakeLists.txt
c-concepts/: CMakeLists.txt  complex_numbers.c  conversions.c  functions_pointers.c  named_function_parameters.c  process.c  recursive_multiplication.c  type_literals.c  weirdCsyntax.c
context-manager/: CMakeLists.txt  context_manager.c  context_manager.h
data-structures/: CMakeLists.txt
data-structures/Arrays/: mul-dim-arrays.c
data-structures/LinkedList/: CMakeLists.txt  SinglyLinkedLists.c
data-structures/Matrices/: CMakeLists.txt  cholesky_implementation.c  matrice-ops.c
searching/: CMakeLists.txt  binary_search_p.c
sorting/: CMakeLists.txt  bubble_sort_p.c
src/: file.txt  main.c
src/data-structures/Arrays/: mul-dim-arrays.c
src/data-structures/LinkedList/: SinglyLinkedLists.c
src/openai-withoout-context/: context_manager.txt
src/utility/: context_manager.c  read_from_files.c
utilities/: CMakeLists.txt  convert_to_base.c  read_from_files.c
