add_executable(named_function_param named_function_parameters.c)
add_executable(r_mul recursive_multiplication.c)
add_executable(processes process.c)
add_executable(weird-syntax weirdCsyntax.c)
add_executable(complex_numbers complex_numbers.c)
add_executable(conversions conversions.c)
add_executable(functions_pointers functions_pointers.c)